nuevo edit en index

--- a/git_landing/index.html
+++ b/git_landing/index.html
@@ -19,6 +19,14 @@
     </button>
   </div>
   
+    <br>
+    <br>
+    <hr>
+    <ol>
+      <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores maxime corporis, possimus illo culpa quisquam similique, veritatis non eveniet asperiores ipsum vero, ducimus dignissimos laudantium obcaecati cum autem! Minus, harum!</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur iusto voluptate, hic et quidem vero debitis, eum repudiandae deserunt voluptas accusantium at quam iste molestias suscipit beatae quaerat architecto fugiat!</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quisquam vitae corrupti incidunt ad perferendis inventore neque facilis nostrum obcaecati. Ut porro dicta eius inventore laboriosam dolor facilis expedita veritatis.</li>
+    </ol>
   
 </body>
 </html>
